--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <li><i class="ri-phone-fill"></i>FREE<br>Tech Support</li>
                     <li><i class="ri-product-hunt-fill"></i> OVER <br>5000+ Products</li>
                     <li><i class="ri-refund-2-line"></i>15-DAY <br> Return</li>
+                    <li>10<i class="ri-percent-line"></i><br>Discount</li>
                 </ol>
             </div>
        
