--- a/news4.html
+++ b/news4.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo" id="logo"><h3>Quality</h3></a>
+        <a href="" class="logo" id="logo"><h3>BassS</h3></a>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
