--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <a href="#category">Category</a>
                 <a href="#about">About</a>
                 <a href="#brands">Brands</a>
-                <a href="#contact">Contact</a>
             </nav>
 
         </header> 
@@ -145,33 +144,14 @@
         
             </div>
         </section>   
-
-        <section class="contact" id="contact">
-            <h2 class="c-heading">Contact Us</h2>
-
-            <form action="#" class="form">
-                <div class="input-box">
-                    <input type="text" placeholder="Full Name">
-                    <input type="email" placeholder="Email Address">
-                </div>
-                <div class="input-box">
-                    <input type="number" placeholder="Mobile Number">
-                    <input type="text" placeholder="Email Subject">
-                </div>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-                <input type="Submit" value="Send Message" class="btn">
-            </form>
-        </section>
-
         <footer class="im-footer">
             <div class="footer-text">
                 <p>Copyright &copy; 2023 | All Rights Reserved.</p>
             </div>
             <div class="f-icons">
-                <a href="" class="f-book"><i class="ri-facebook-circle-fill"></i></a>
-                <a href="" class="i-gram"><i class="ri-instagram-fill"></i></a>
-                <a href="" class="x-t"><i class="ri-twitter-fill"></i></a>
-                <a href="" class="link-in"><i class="ri-linkedin-fill"></i></a>
+                <a href="www.linkedin.com/in/hariharachandru-v-747ba0265" class="link-in"><i class="ri-linkedin-fill"></i></a>
+                <a href="https://github.com/Chandru070" class="git-hub"><i class="ri-github-fill"></i></a>
+                <a href="" class="file-r"><i class="ri-file-fill"></i></a>
             </div>
     
             <div class="footer-iconTop">
