--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="f-icons">
                 <a href="www.linkedin.com/in/hariharachandru-v-747ba0265" class="link-in"><i class="ri-linkedin-fill"></i></a>
                 <a href="https://github.com/Chandru070" class="git-hub"><i class="ri-github-fill"></i></a>
-                <a href="" class="file-r"><i class="ri-file-fill"></i></a>
+                <a href="https://drive.google.com/file/d/1oFd7UVyrqAc8kK4AVqoLRmZKvDDrmK1d/view?usp=sharing" class="file-r"><i class="ri-file-fill"></i></a>
             </div>
     
             <div class="footer-iconTop">
