--- a/news4.html
+++ b/news4.html
@@ -66,12 +66,11 @@
         <div class="footer-text">
             <p>Copyright &copy; 2023 | All Rights Reserved.</p>
         </div>
-        <div class="f-icons">
-            <a href=""><i class="ri-facebook-circle-fill"></i></a>
-            <a href=""><i class="ri-instagram-fill"></i></a>
-            <a href=""><i class="ri-twitter-fill"></i></a>
-            <a href=""><i class="ri-linkedin-fill"></i></a>
-        </div>
+            <div class="f-icons">
+                <a href="www.linkedin.com/in/hariharachandru-front-end-developer" class="link-in"><i class="ri-linkedin-fill"></i></a>
+                <a href="https://github.com/Chandru070" class="git-hub"><i class="ri-github-fill"></i></a>
+                <a href="https://drive.google.com/file/d/1oFd7UVyrqAc8kK4AVqoLRmZKvDDrmK1d/view?usp=sharing" class="file-r"><i class="ri-file-fill"></i></a>
+            </div>
 
         <div class="footer-iconTop">
             <a href="#home" class="f-btn"><i class="ri-arrow-up-line"></i></a>
