--- a/news3.html
+++ b/news3.html
@@ -57,7 +57,7 @@
             <p>Copyright &copy; 2023 | All Rights Reserved.</p>
         </div>
         <div class="f-icons">
-                <a href="www.linkedin.com/in/hariharachandru-front-end-developer" class="link-in"><i class="ri-linkedin-fill"></i></a>
+                <a href="https://www.linkedin.com/in/hariharachandru-front-end-developer/" class="link-in"><i class="ri-linkedin-fill"></i></a>
                 <a href="https://github.com/Chandru070" class="git-hub"><i class="ri-github-fill"></i></a>
                 <a href="https://drive.google.com/file/d/1oFd7UVyrqAc8kK4AVqoLRmZKvDDrmK1d/view?usp=sharing" class="file-r"><i class="ri-file-fill"></i></a>
         </div>
