--- a/news2.html
+++ b/news2.html
@@ -56,10 +56,11 @@
 
     <div class="b-images">
         <ul>
-            <li id="yam"><a href=""></a></li>
-            <li id="son"><a href=""></a></li>
-            <li id="boss"><a href=""></a></li>
-            <li id="pearl"><a href=""></a></li>
+            <li><img src="images/roland.jpeg" alt=""></li>
+            <li><img src="images/casio.png" alt=""></li>
+            <li><img src="images/boss.jpg" alt=""></li>
+            <li><img src="images/pearl.jpeg" alt=""></li>
+            <li><img src="images/sony.jpg" alt=""></li>
         </ul>
     </div>
 
