--- a/news1.html
+++ b/news1.html
@@ -56,7 +56,7 @@
 
     <div class="m-footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 | All Rights Reserved.</p>
+            <p>Copyright &copy; 2023 | Hariharachandru</p>
         </div>
         <div class="f-icons">
                 <a href="https://www.linkedin.com/in/hariharachandru-front-end-developer/" class="link-in"><i class="ri-linkedin-fill"></i></a>
