--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 <p>Copyright &copy; 2023 | Hariharachandru</p>
             </div>
             <div class="f-icons">
-                <a href="https://www.linkedin.com/in/hariharachandru-v-747ba0265/" class="link-in"><i class="ri-linkedin-fill"></i></a>
-                <a href="https://github.com/Chandru070" class="git-hub"><i class="ri-github-fill"></i></a>
-                <a href="" class="file-r"><i class="ri-file-fill"></i></a>
+                <a href="https://www.linkedin.com/in/hariharachandru-v-747ba0265/" class="link-in" title="LinkedIn"><i class="ri-linkedin-fill"></i></a>
+                <a href="https://github.com/Chandru070" class="git-hub" title="Github"><i class="ri-github-fill" ></i></a>
+                <a href="" class="file-r" title="file"><i class="ri-file-fill"></i></a>
             </div>
             <div class="footer-iconTop">
                 <a href="#home" class="f-btn"><i class="ri-arrow-up-line"></i></a>
