--- a/news4.html
+++ b/news4.html
@@ -70,7 +70,7 @@
             <div class="f-icons">
                 <a href="https://www.linkedin.com/in/hariharachandru-v-747ba0265/" class="link-in" title="LinkedIn"><i class="ri-linkedin-fill"></i></a>
                 <a href="https://github.com/Chandru070" class="git-hub" title="Github"><i class="ri-github-fill" ></i></a>
-                <a href="https://drive.google.com/drive/my-drive" class="file-r" title="file"><i class="ri-file-fill"></i></a>
+                <a href="https://drive.google.com/file/d/17mWk91wg4vxlMlPpOg1057GH84Z0nOdo/view?usp=drive_link" class="file-r" title="file"><i class="ri-file-fill"></i></a>
             </div>
 
 
