--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div class="banners">                                                   
             <div class="fb">
-                <a id="b1"><h3><p>AT</p>BEST SALE</h3></a>
+                <a id="b1"><h3><p>MAKE</p>WAVES</h3></a>
             </div>  
         
             <div class="tb">
